--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.gameanalytics.sdk": "https://github.com/GameAnalytics/GA-SDK-UNITY.git",
     "com.lionstudios.release.lionkit": "1.4.9",
     "com.unity.ide.visualstudio": "2.0.9",
     "com.unity.textmeshpro": "2.1.6",
